Perkin-UAT/force-app/main/default/objects/Extended_Warranty_Calculation__c/Extended_Warranty_Calculation__c.object-meta.xml
<CustomObject>
    <description>Object to store Data to calculate price for Warranty products(Used in Price Rule). (Source: S-692534)</description>
    <label>Extended Warranty Calculation</label>
    <nameField>
        <label>Extended Warranty Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extended Warranty Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>