Perkin-UAT/force-app/main/default/objects/Extended_Warranty_Calculation__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Field to store percentage value to calculate Warranty Product price. (Source: S-692534)</description>
    <inlineHelpText>Field to store percentage value to calculate Warranty Product price</inlineHelpText>
    <label>Percentage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>