Perkin-UAT/force-app/main/default/objects/Extended_Warranty_Calculation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to Map Warranty Product. (Source: S-692534)</description>
    <inlineHelpText>Field to Map Warranty Product.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Extended Warranty Calculations</relationshipLabel>
    <relationshipName>Ext_Warranty_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>