Perkin-UAT/force-app/main/default/objects/Extended_Warranty_Calculation__c/listViews/All_Extended_Warranty_Calculations.listView-meta.xml
<ListView>
    <fullName>All_Extended_Warranty_Calculations</fullName>
    <columns>NAME</columns>
    <columns>PKI_Super_Territory__c</columns>
    <columns>Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Extended Warranty Calculations</label>
    <language>en_US</language>
</ListView>